--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,9 +9,12 @@
     <script src="app.js" defer></script>
     <title>Files</title>
 </head>
+
 <body class="flexCenter">
-    <div class="yeah flexCenter F_column"><h1>La liste</h1>
+    <div class="yeah flexCenter F_column">
+        <h1>La liste</h1>
         <ul id="fileList"></ul>
     </div>
 </body>
+
 </html>
